Sun May 22 18:59:27 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* ext/openssl/ossl_asn1.c(ossl_asn1_default_tag): avoid using RCLASS_SUPER
	  to make it compilable. Plus, tabify and change variable definition style.

Sun May 22 18:26:43 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (vm_xcalloc): use calloc provided by platforms.
	  fixes #4754

Sun May 22 11:44:53 2011  Eric Hodel  <drbrain@segment7.net>

	* ext/pty/pty.c:  Improve documentaton.  Patch by David Copeland.
	  [Ruby 1.9 - Bug #4756]

Sun May 22 11:26:39 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/timeout.rb:  Improve documentation.  Patch by David Copeland.
	  [Ruby 1.9 - Bug #4755]

Sun May 22 11:21:41 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/ipaddr.rb:  Improve documentation.  Patch by Sandor Szucs.
	  [Ruby 1.9 - Bug #4753]

Sun May 22 11:14:40 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/forwardable.rb:  Document def_delegator.  Patch by Sandor Szucs.
	  [Ruby 1.9 - Bug #4752]

Sun May 22 11:11:41 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/fileutils.rb:  Document block behavior of FileUtils.cd.  Patch by
	  Bil Kleb.  [Ruby 1.9 - Bug #4751]

Sun May 22 11:07:47 2011  Eric Hodel  <drbrain@segment7.net>

	* ext/curses/curses.c:  Complete documentation.  Patch by Vincent
	  Batts.  [Ruby 1.9 - Bug #4748]

Sun May 22 09:29:43 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* test/ruby/test_rubyoptions.rb (TestRubyOptions#test_set_program_name):
	  use spawn. it prevent that other tests inherit renamed $0.

Sun May 22 08:57:13 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_asn1.c: Default tag lookup in constant time via hash
	instead of previous linear algorithm.
	[Ruby 1.9 - Feature #4309][ruby-core:34813]

Sun May 22 07:54:16 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_digest.c: Explain DSS and DSS1 in documentation.

Sun May 22 07:10:25 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>
