@@ -1,3 +1,11 @@
+Sun May 22 21:29:29 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>
+
+	* include/ruby/defines.h (CASEFOLD_FILESYSTEM): Revert r30508. See #4255.
+	  Now __APPLE__ is not CASEFOLD_FILESYSTEM again.
+
+	* load.c (loaded_feature_path, rb_feature_p, load_lock): Revert r30508.
+	  See #4255. Make $LOADED_FEATURES scanning case-sensitive again.
+
 Sun May 22 18:59:27 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>
 
 	* ext/openssl/ossl_asn1.c(ossl_asn1_default_tag): avoid using RCLASS_SUPER
